Fix spacing on hero screen, some cleanup

--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@
     display: none; 
 }
 
-.font-alt {
+.font-merriweather {
     font-family: Merriweather;
 }
 
